# waifubot

./: CMakeLists.txt
headers/: generic_connection.h  http_connection.h  irc_connection.h
source/: CMakeLists.txt  generic_connection.cpp  http_connection.cpp  irc_connection.cpp  main.cpp
